--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -13,7 +13,7 @@ set -g prefix ^s
 # Plugin settings
 set -g @resurrect-capture-pane-contents 'on'
 set -g @prefix_highlight_bg 'colour236'
-set -g @extrakto_key 'q'
+set -g @extrakto_key 'Enter'
 set -g @resurrect-save 'S'
 set -g @yank_selection 'primary' # or 'secondary' or 'clipboard'
 
