--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -5,7 +5,7 @@ pid_file                     "~/.config/mpd/mpd.pid"
 state_file                   "~/.config/mpd/mpdstate"
 user                         "neg"
 max_output_buffer_size       "524288"
-bind_to_address              "[::1]:6600"
+bind_to_address              "localhost:6600"
 connection_timeout           "5"
 input { 
     plugin "curl" 
