[polybar] update polybar style

--- a/polybar/.config/polybar/common.cfg
+++ b/polybar/.config/polybar/common.cfg
@@ -1,41 +1,22 @@
 [color]
-bg = #8c0a0a0a
-fg = #f5f5f5
 ac = #d26273
 mgf = "#aa020209"
 mf = #fdd835
 background = "#00020209"
-foreground = "#cccccc"
+foreground = "#CFCFDB"
 border = "#002b36"
-border_top = "#002b36"
-black = "#020202"
-bright_black = "#3D3D3D"
-red = "#8A2F58"
-bright_red = "#CF4F88"
 green = "#287373"
-bright_green = "#53A6A6"
-yellow = "#914E89"
-bright_yellow = "#BF85CC"
 blue = "#395573"
-bright_blue = "#4779B3"
-magenta = "#5E468C"
-bright_magenta = "#7F62B3"
-teal = "#2B7694"
-bright_teal = "#47959E"
-silver = "#899CA1"
-white = "#617287"
-bracket_color = "%{F#395573}"
 
 [border]
-t = 0
-b = 0
-l = 0
-r = 0
+t = 4
+b = 4
+l = 4
+r = 4
 
 [font]
 font-0 = Iosevka:style=Medium:size=30;6
 font-1 = Iosevka:style=Bold:size=36;7
 font-2 = Iosevka:style=Bold:size=32;7
-font-3 = PragmataPro for Powerline:style=Bold:size=32;6
-
+font-3 = FiraCode Nerd Font Mono:size=36;7
 ; vim: set ft=dosini:
