--- a/polybar/.config/polybar/modules.cfg
+++ b/polybar/.config/polybar/modules.cfg
@@ -19,8 +19,9 @@ type = custom/script
 exec = PYTHONPATH=${XDG_CONFIG_HOME}/i3 python -u -m bin.polybar_ws 2> /dev/null
 interval = 0
 format-background = ${color.mgf}
-format = <label>
+format = "<label>"
 format-suffix = " "
+format-prefix = " "
 tail = true
 
 [module/volume]
@@ -41,6 +42,7 @@ tail = true
 type = internal/date
 date = %H:%M%
 interval = 5
+format-suffix = " "
 format-background = ${color.mgf}
 
 [module/xkeyboard]
@@ -52,6 +54,7 @@ label-indicator-background = ${color.mgf}
 label-indicator-underline = ${color.mgf}
 format-background = ${color.mgf}
 format-suffix = ""
+format-prefix = " "
 
 [module/networkeno1]
 type = internal/network
@@ -59,7 +62,7 @@ interface = eno1
 interval = 1.0
 accumulate-stats = false # Accumulate values from all interfaces
 ping-interval = 60.0
-label-connected = "eth:%downspeed%%{F#395573}/%{F-}%upspeed% "
+label-connected = " eth:%downspeed%%{F#395573}/%{F-}%upspeed% "
 format-connected-background = ${color.mgf}
 
 [module/networkenp6s0]
@@ -68,7 +71,7 @@ interface = enp6s0
 interval = 1.0
 accumulate-stats = false # Accumulate values from all interfaces
 ping-interval = 60.0
-label-connected = "eth:%downspeed%%{F#395573}/%{F-}%upspeed% "
+label-connected = " eth:%downspeed%%{F#395573}/%{F-}%upspeed% "
 format-connected-background = ${color.mgf}
 
 [module/networkenp7s0]
@@ -77,7 +80,7 @@ interface = enp7s0
 interval = 1.0
 accumulate-stats = false # Accumulate values from all interfaces
 ping-interval = 60.0
-label-connected = "eth:%downspeed%%{F#395573}/%{F-}%upspeed% "
+label-connected = " eth:%downspeed%%{F#395573}/%{F-}%upspeed% "
 format-connected-background = ${color.mgf}
 
 ; vim: set ft=dosini:
