[polybar] upgrade border

--- a/polybar/.config/polybar/common.cfg
+++ b/polybar/.config/polybar/common.cfg
@@ -4,15 +4,17 @@ mgf = "#aa020209"
 mf = #fdd835
 background = "#00020209"
 foreground = "#CFCFDB"
-border = "#002b36"
+border = "#66005f87"
+border_nontransparent = "#de003D57"
 green = "#287373"
 blue = "#395573"
+delimiter = "#005f87"
 
 [border]
-t = 4
-b = 4
-l = 4
-r = 4
+t = 2
+b = 2
+l = 2
+r = 2
 
 [font]
 font-0 = Iosevka:style=Medium:size=30;6
