--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,15 +1,15 @@
 [Settings]
 gtk-button-images=0
-gtk-cursor-theme-name=Breeze_Hacked
-gtk-cursor-theme-size=38
+gtk-cursor-theme-name=SpaceKCursors
+gtk-cursor-theme-size=96
 gtk-decoration-layout=appmenu:none
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=0
 gtk-font-name=Iosevka Medium 12
-gtk-icon-theme-name=Flat-Remix-Blue-Dark
+gtk-icon-theme-name=korla
 gtk-key-theme-name=Emacs
 gtk-menu-images=0
-gtk-modules=canberra-gtk-module
+gtk-modules=canberra-gtk-module:gail:atk-bridge
 gtk-theme-name=Flat-Neg
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
