[polybar] more simple cfg

--- a/polybar/.config/polybar/common.cfg
+++ b/polybar/.config/polybar/common.cfg
@@ -1,14 +1,15 @@
 [color]
-ac = #d26273
-mgf = "#aa020209"
-mf = #fdd835
+ac = "#D26273"
+mgf = "#AA020209"
+mf = "#FDD835"
 background = "#00020209"
 foreground = "#CFCFDB"
-border = "#3c005f87"
-border_nontransparent = "#3c005f87"
+border = "#3C005F87"
+border_nontransparent = "#3C005F87"
 green = "#287373"
 blue = "#395573"
-delimiter = "#005f87"
+delimiter = "#005F87"
+start_end = "#005F87"
 
 [border]
 t = 2
