--- a/polybar/.config/polybar/decor.cfg
+++ b/polybar/.config/polybar/decor.cfg
@@ -7,17 +7,17 @@ content-foreground = ${color.mgf}
 type = custom/text
 content = "%{T3}%{F-}%{T-}"
 content-background = ${color.mgf}
-content-foreground = "#005f87"
+content-foreground = "${color.start_end}"
 
 [module/end]
 type = custom/text
 content = "%{T3}%{T-}"
 content-background = ${color.mgf}
-content-foreground = "#005f87"
+content-foreground = "${color.start_end}"
 
 [module/start-dark]
 type = custom/text
-content = " %{T3}%{F#005f87}╱%{F-}%{T-} "
+content = "%{T3}%{F#005f87}╱%{F-}%{T-}"
 content-background = ${color.mgf}
 
 [module/start-br]
@@ -27,7 +27,7 @@ content-background = ${color.mgf}
 
 [module/start-mpd]
 type = custom/text
-content = "%{T3}%{F#005f87}╲ %{F-}%{T-} "
+content = "%{T3}%{F#005f87}╲ %{F-}%{T-}"
 content-background = ${color.mgf}
 
 [module/left-end-top]
@@ -38,6 +38,10 @@ content = "%{T2}%{T-}"
 inherit = module/decor-glyph
 content = "%{T2}%{T-}%{O0}"
 
+[module/right]
+inherit = module/decor-glyph
+content = "%{T2}%{T-}%{O0}%{T2}%{T-}"
+
 [module/left-end-bottom]
 inherit = module/decor-glyph
 content = "%{T2}%{T-}"
@@ -45,5 +49,4 @@ content = "%{T2}%{T-}"
 [module/right-end-bottom]
 inherit = module/decor-glyph
 content = "%{T2}%{T-}%"
-
 ; vim:ft=dosini:
