[picom] update CS

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -28,12 +28,12 @@ glx-swap-method         : 2;
 blur : { method = "dual_kawase"; strength = 5.0; }
 
 wintypes : {
-    dock          : { opacity : 0.9; shadow = false; full-shadow = false; };
-    menu          : { fade = false; opacity = false; shadow = false; full-shadow = false; };
-    dropdown_menu : { opacity = 0.89; fade = false; shadow = false; full-shadow = false; };
-    popup_menu    : { opacity = 0.89; fade = false; shadow = false; full-shadow = false; };
-    utility       : { fade = false; opacity = false; shadow = false; full-shadow = false; };
-    tooltip       : { fade = false; opacity = false; shadow = false; full-shadow = false; };
+    dock          : { opacity : 0.9; shadow : false; full-shadow : false; };
+    menu          : { fade : false; opacity : false; shadow : false; full-shadow : false; };
+    dropdown_menu : { opacity : 0.89; fade : false; shadow : false; full-shadow : false; };
+    popup_menu    : { opacity : 0.89; fade : false; shadow : false; full-shadow : false; };
+    utility       : { fade : false; opacity : false; shadow : false; full-shadow : false; };
+    tooltip       : { fade : false; opacity : false; shadow : false; full-shadow : false; };
 };
 
 shadow-exclude : [
