[polybar] try another colors in panel

--- a/polybar/.config/polybar/common.cfg
+++ b/polybar/.config/polybar/common.cfg
@@ -2,7 +2,7 @@
 ac = "#D26273"
 mgf = "#dd020209"
 background = "#77020209"
-foreground = "#CFCFDB"
+foreground = "#ffCFCFDB"
 border = "#66005F87"
 border_nontransparent = "#66005F87"
 green = "#287373"
