--- a/polybar/.config/polybar/modules.cfg
+++ b/polybar/.config/polybar/modules.cfg
@@ -24,7 +24,7 @@ tail = true
 
 [module/time]
 type = internal/date
-date = %H:%M%
+date = %{F#A9C3F5}%H%{F#657491}´%{F#A9C3F5}%M%%{F-}
 interval = 5
 format-suffix = " "
 format-background = ${color.mgf}
@@ -32,7 +32,7 @@ format-background = ${color.mgf}
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
-label-layout = input:%layout%
+label-layout = %{F#7EBBFC}%layout%%{F-}
 label-indicator-padding = 0
 label-indicator-background = ${color.mgf}
 label-indicator-underline = ${color.mgf}
