[polybar] fancy polybar settings

--- a/polybar/.config/polybar/modules.cfg
+++ b/polybar/.config/polybar/modules.cfg
@@ -24,7 +24,7 @@ tail = true
 
 [module/time]
 type = internal/date
-date = %{F#A9C3F5}%H%{F#657491}´%{F#A9C3F5}%M%%{F-}
+date = %{F#A9C3F5}%H%{F#657491}:%{F#A9C3F5}%M%%{F-}
 interval = 5
 format-suffix = " "
 format-background = ${color.mgf}
@@ -46,7 +46,7 @@ interface = eno1
 interval = 1.0
 accumulate-stats = false # Accumulate values from all interfaces
 ping-interval = 60.0
-label-connected = " eth:%downspeed%%{F#395573}/%{F-}%upspeed% "
+label-connected = " eth%{F#657491}:%{F}%downspeed%%{F#395573}/%{F-}%upspeed% "
 format-connected-background = ${color.mgf}
 
 [module/networkenp6s0]
@@ -55,7 +55,7 @@ interface = enp6s0
 interval = 1.0
 accumulate-stats = false # Accumulate values from all interfaces
 ping-interval = 60.0
-label-connected = " eth:%downspeed%%{F#395573}/%{F-}%upspeed% "
+label-connected = " eth%{F#657491}:%{F}%downspeed%%{F#395573}/%{F-}%upspeed% "
 format-connected-background = ${color.mgf}
 
 [module/networkenp7s0]
@@ -64,7 +64,7 @@ interface = enp7s0
 interval = 1.0
 accumulate-stats = false # Accumulate values from all interfaces
 ping-interval = 60.0
-label-connected = " eth:%downspeed%%{F#395573}/%{F-}%upspeed% "
+label-connected = " eth%{F#657491}:%{F}%downspeed%%{F#395573}/%{F-}%upspeed% "
 format-connected-background = ${color.mgf}
 
 ; vim: set ft=dosini:
