[polybar] more fancy panel

--- a/polybar/.config/polybar/modules.cfg
+++ b/polybar/.config/polybar/modules.cfg
@@ -38,7 +38,7 @@ label-indicator-background = ${color.mgf}
 label-indicator-underline = ${color.mgf}
 format-background = ${color.mgf}
 format-suffix = ""
-format-prefix = " "
+format-prefix = " %{T5 F#8BAAC7}%{T- F-} "
 
 [module/networkeno1]
 type = internal/network
@@ -46,7 +46,7 @@ interface = eno1
 interval = 1.0
 accumulate-stats = false # Accumulate values from all interfaces
 ping-interval = 60.0
-label-connected = " eth%{F#657491}:%{F}%downspeed%%{F#395573}/%{F-}%upspeed% "
+label-connected = "${templates.network}"
 format-connected-background = ${color.mgf}
 
 [module/networkenp6s0]
@@ -55,7 +55,7 @@ interface = enp6s0
 interval = 1.0
 accumulate-stats = false # Accumulate values from all interfaces
 ping-interval = 60.0
-label-connected = " eth%{F#657491}:%{F}%downspeed%%{F#395573}/%{F-}%upspeed% "
+label-connected = "${templates.network}"
 format-connected-background = ${color.mgf}
 
 [module/networkenp7s0]
@@ -64,7 +64,7 @@ interface = enp7s0
 interval = 1.0
 accumulate-stats = false # Accumulate values from all interfaces
 ping-interval = 60.0
-label-connected = " eth%{F#657491}:%{F}%downspeed%%{F#395573}/%{F-}%upspeed% "
+label-connected = "${templates.network}"
 format-connected-background = ${color.mgf}
 
 ; vim: set ft=dosini:
