--- a/polybar/.config/polybar/common.cfg
+++ b/polybar/.config/polybar/common.cfg
@@ -16,10 +16,14 @@ b = 2
 l = 2
 r = 2
 
+[templates]
+network = " %{T5 F#8BAAC7}%{T- F-} %downspeed%%{F#395573}/%{F-}%upspeed% "
+
 [font]
 font-0 = Iosevka:style=Medium:size=28.5;6
 font-1 = Iosevka:style=Bold:size=32;7
 font-2 = Iosevka:style=Bold:size=28;7
 font-3 = FiraCode Nerd Font Mono:size=32;7
+font-4 = Font Awesome 5 Free Solid:size=17;2
 
 ; vim: set ft=dosini:
