[mpd] better pcm format

--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -7,8 +7,8 @@ user                         "neg"
 max_output_buffer_size       "524288"
 bind_to_address              "localhost:6600"
 connection_timeout           "5"
-input { 
-    plugin "curl" 
+input {
+    plugin "curl"
 }
 save_absolute_paths_in_playlists  "yes"
 metadata_to_use                   "artist,album,title,track,name,genre,date"
@@ -36,7 +36,8 @@ audio_output {
     auto_format          "no"
     auto_channels        "no"
     replay_gain_handler  "none"
-    mixer_type           "hardware"
+    mixer_type           "none"
+    format               "44100:32:2"
 }
 
 audio_output {
