--- a/systemd/.config/systemd/user/picom.service
+++ b/systemd/.config/systemd/user/picom.service
@@ -5,7 +5,7 @@ After=dbus.service
 [Service]
 Type=simple
 ExecStartPre=/bin/sleep 2
-ExecStart=/usr/bin/picom --backend glx --dbus
+ExecStart=/usr/bin/picom --backend glx --dbus --experimental-backends
 
 [Install]
 WantedBy=default.target
