--- a/tmux/.config/tmux/plugins/extrakto/.travis.yml
+++ b/tmux/.config/tmux/plugins/extrakto/.travis.yml
@@ -1,11 +1,14 @@
 language: python
 python:
-  - "2.7"
   - "3.6"
   - "3.7"
   - "3.8"
 # no dependencies
-#install:
-#  - pip install -r requirements.txt
+install:
+  - pip install black
+  - curl -LsS -o ~/shfmt https://github.com/mvdan/sh/releases/download/v3.1.2/shfmt_v3.1.2_linux_amd64
+  - chmod +x ~/shfmt
 script:
+  - black --check .
+  - ~/shfmt -d scripts/ extrakto.tmux
   - pytest
