--- a/pulse/.config/pulse/daemon.conf
+++ b/pulse/.config/pulse/daemon.conf
@@ -1,10 +1,10 @@
 default-sample-format = s32le
 default-sample-rate = 44100
 alternate-sample-rate = 48000
-realtime-scheduling = false
+realtime-scheduling = true
 avoid-resampling = yes
 flat-volumes = false
-resample-method = speex-float-5
+resample-method = soxr-vhq
 rlimit-rttime = -1
 exit-idle-time = -1
 default-fragments = 2
