--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ cache_nvim
 cache_vim
 .cargo
 .ccache
+.ccls-cache
 cgdb/.cgdb/logs/
 cgdb/.cgdb/readline_history.txt
 .cgdb/readline_history.txt
@@ -88,7 +89,9 @@ chromium
 .cxoffice
 cycle_settings.pyc
 .dbus
+dev/.config/nvim/sessions/
 doc
+doom-emacs/.doom.d/init.elc
 .drip
 .drip_history
 .dub
@@ -104,8 +107,10 @@ dw
 .fonts/*
 .forecastrc
 games
+.gdb_history
 .gdrive
 .gem
+ghc/.ghc/ghci_history
 .ghc/ghci_history
 .ghc/x86_64-linux-8.0.1/
 .gimp-2.8
@@ -120,6 +125,8 @@ gmail/client_secrets.json
 .gradle
 .gstreamer-0.10
 gtk/.config/gtk-2.0/gtkfilechooser.ini
+hcache
+home.gmail/hcache
 /home/neg/.config/gimp-2.8
 /home/neg/.config/menus
 /home/neg/.config/z
@@ -148,10 +155,26 @@ M
 .mime.types
 misc/.slit/history
 .mozilla
+mpd/.config/mpd/
+mpd/.config/mpd/mpd.db
+mpd/.config/mpd/mpd.pid
+mpd/.config/mpd/mpdstate
+mpd/.config/mpd/sticker.sql
+mpd/.mpd/mpd.db
+mpd/.mpd/mpd.pid
+mpd/.mpd/mpdstate
+music/.config/mpd/mpdstate
 .mutt_certificates
+mutt/.config/mutt/home.gmail/hcache
 .mutt/hcache/
 mutt/.mutt/hcache/*
+mutt/.mutt/home.gmail/cache
+mutt/.mutt/home.gmail/cache/
+mutt/.mutt/home.gmail/hcache
 mutt/.mutt/mailboxes
+mutt/.mutt/work.gmail/cache
+mutt/.mutt/work.gmail/cache/
+mutt/.mutt/work.gmail/hcache
 .my-pwds.gpg
 .newsbeuter/cache.db
 .newsbeuter/error.log
@@ -166,7 +189,23 @@ mutt/.mutt/mailboxes
 .npm
 ns_config.pyc
 .nv
+nvim/.config/nvim/nvim/.compiler_info
+nvim/.config/nvim/nvim/.netrwhist
+nvim/.config/nvim/nvim/plugged
+nvim/.config/nvim/nvim/sessions
+nvim/.config/nvim/nvim/undo
+nvim/.config/nvim/plugged
+nvim/.config/nvim/sessions
+nvim/.config/nvim/session.vim
+nvim/.config/nvim/undo
+nvim/.vim/.netrwhist
+nvim/.vim/plugged/
+nvim/.vim/sessions/
+nvim/.vim/undo/
+oni/.config/oni/tsconfig.json
 .ovftool.ssldb
+ovmf
+pack
 password.gpg
 .password-store
 .pcsxr
@@ -179,6 +218,7 @@ polybar/.config/polybar/gmail/client_secrets.json
 .pulse-cookie
 __pycache__
 .PyCharm40
+pylint/.config/pylint
 .python-eggs
 .pythonhist
 .python_history
@@ -200,6 +240,7 @@ resurrect
 .scalanative
 .scdl.cfg
 script_i3_general.pyc
+session
 singleton_mixin.pyc
 .Skype
 skypeforlinux
@@ -215,9 +256,10 @@ state_vim.vim
 .steampath
 .steampid
 .subversion/
-surf
 .surf
+surf
 .swt
+sys/.config/tmux/plugin/
 .task
 .TelegramDesktop
 .t-engine
@@ -225,8 +267,10 @@ surf
 .texmf-var
 .theano
 .thumbnails
-tmp
 *.tmp
+tmp
+tmux/.tmux/plugins/tmux-copycat/
+tmux/.tmux/plugins/tmux-fingers/
 .tor-browser-en
 torrent
 vid
@@ -243,6 +287,7 @@ watch_later
 .zcompcache/
 .zex_history
 .zhistory
+.zinit
 .zsh/cache
 .zsh_exnhist
 .zsh_history
@@ -251,47 +296,4 @@ zsh_history
 zsh/.zsh/.zcompdump
 zsh/.zsh/zcomp-sanctum
 *.zwc
-mpd/.mpd/mpd.db
-mpd/.mpd/mpd.pid
-mpd/.mpd/mpdstate
-doom-emacs/.doom.d/init.elc
-oni/.config/oni/tsconfig.json
-mutt/.mutt/home.gmail/cache/
-mutt/.mutt/home.gmail/hcache
-mutt/.mutt/work.gmail/cache/
-mutt/.mutt/work.gmail/hcache
-mutt/.mutt/home.gmail/cache
-mutt/.mutt/work.gmail/cache
-.ccls-cache
-.gdb_history
-ghc/.ghc/ghci_history
-nvim/.vim/plugged/
-nvim/.vim/sessions/
-nvim/.vim/.netrwhist
-nvim/.vim/undo/
-nvim/.config/nvim/nvim/plugged
-nvim/.config/nvim/nvim/undo
-nvim/.config/nvim/nvim/sessions
-nvim/.config/nvim/nvim/.compiler_info
-nvim/.config/nvim/nvim/.netrwhist
-nvim/.config/nvim/undo
-nvim/.config/nvim/plugged
-nvim/.config/nvim/sessions
-nvim/.config/nvim/session.vim
-tmux/.tmux/plugins/tmux-copycat/
-tmux/.tmux/plugins/tmux-fingers/
-home.gmail/hcache
-mutt/.config/mutt/home.gmail/hcache
-hcache
-mpd/.config/mpd/mpd.db
-mpd/.config/mpd/mpd.pid
-mpd/.config/mpd/mpdstate
-mpd/.config/mpd/sticker.sql
-mpd/.config/mpd/
-.zinit
-pylint/.config/pylint
-ovmf
-pack
-session
-sys/.config/tmux/plugin/
-dev/.config/nvim/sessions/
+music/.config/mpd/mpd.pid
