[picom] better latency for some progs

--- a/negi3wm/.config/picom/picom.conf
+++ b/negi3wm/.config/picom/picom.conf
@@ -25,6 +25,8 @@ inactive-dim            : 0.0;
 glx-no-stencil          : true;
 glx-swap-method         : 2;
 
+xrender-sync-fence      : true;
+
 blur : { method = "dual_kawase"; strength = 5.0; }
 
 wintypes : {
