--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -2,7 +2,7 @@
     email = serg.zorg@gmail.com
     name = Neg
 [core]
-	pager = diff-so-fancy | less --tabs=4 -RFX
+    pager = PAGER= delta
     whitespace = trailing-space,cr-at-eol
     excludesfile = /etc/gitignore
     editor = /usr/bin/nvim
@@ -45,6 +45,7 @@
 [diff]
     tool = nwim
     algorithm = patience
+    colorMoved = default
 [alias]
     patch = !git --no-pager diff --no-color
 [difftool "nwim"]
@@ -60,7 +61,7 @@
 [credential]
     helper = cache --timeout=28800
 [interactive]
-    diffFilter = diff-highlight
+    diffFilter = delta --color-only
 [filter "lfs"]
     required = true
     clean = git-lfs clean -- %f
@@ -69,6 +70,20 @@
 [push]
     default = simple
 [pull]
-	rebase = true
-[diff-so-fancy]
-	stripLeadingSymbols = false
+    rebase = true
+[delta]
+    features = unobtrusive-line-numbers decorations
+    inspect-raw-lines = true
+[delta "decorations"]
+    commit-decoration-style = bold yellow box ul
+    file-style = bold yellow ul
+    file-decoration-style = none
+[delta "unobtrusive-line-numbers"]
+    line-numbers = true
+    line-numbers-minus-style = "#444444"
+    line-numbers-zero-style = "#444444"
+    line-numbers-plus-style = "#444444"
+    line-numbers-left-format = "{nm:>4}┊"
+    line-numbers-right-format = "{np:>4}┊"
+    line-numbers-left-style = blue
+    line-numbers-right-style = blue
