[tmux] renumber windows

--- a/sys/.config/tmux/tmux.conf
+++ b/sys/.config/tmux/tmux.conf
@@ -40,6 +40,7 @@ set-window-option -g aggressive-resize on
 bind C-s last-window
 set -g history-limit 131072
 set -s focus-events on
+set -g renumber-windows on
 
 # 24-bit color support
 set -g default-terminal "tmux-256color" # tmux-256color by default
