--- a/negi3wm/.config/picom/picom.conf
+++ b/negi3wm/.config/picom/picom.conf
@@ -18,13 +18,19 @@ fading                  : false;
 unredir-if-possible     : true;
 detect-rounded-corners  : true;
 detect-client-opacity   : true;
+detect-transient        : true;
+detect-client-leader    : true;
 use-damage              : true;
 refresh-rate            : 0;
 inactive-dim            : 0.0;
 
+experimental-backends : true;
+glx-no-rebind-pixmap  : true;
+
 glx-no-stencil          : true;
 glx-swap-method         : 2;
 
+# Needed on nvidia-drivers with GLX backend for some users.
 xrender-sync-fence      : true;
 
 blur : { method = "dual_kawase"; strength = 5.0; }
