[bpytop] remove tree view

--- a/sys/.config/bpytop/bpytop.conf
+++ b/sys/.config/bpytop/bpytop.conf
@@ -5,7 +5,7 @@ view_mode=proc
 update_ms=1600
 proc_sorting="cpu responsive"
 proc_reversed=False
-proc_tree=True
+proc_tree=False
 tree_depth=3
 proc_colors=True
 proc_gradient=True
