[bpytop] longer update, cleanup

--- a/sys/.config/bpytop/bpytop.conf
+++ b/sys/.config/bpytop/bpytop.conf
@@ -2,11 +2,11 @@
 color_theme="flat-remix"
 theme_background=True
 view_mode=proc
-update_ms=1600
+update_ms=4000
 proc_sorting="cpu responsive"
 proc_reversed=False
 proc_tree=False
-tree_depth=3
+tree_depth=0
 proc_colors=True
 proc_gradient=True
 proc_per_core=False
@@ -20,14 +20,12 @@ custom_cpu_name=""
 disks_filter=""
 mem_graphs=True
 show_swap=True
-swap_disk=True
-show_disks=True
-net_download="10M"
-net_upload="10M"
-net_auto=True
+swap_disk=False
+show_disks=False
+net_auto=False
 net_sync=False
 net_color_fixed=False
-show_battery=True
+show_battery=False
 show_init=True
 update_check=True
 log_level=ERROR
