[mpd] better defaults

--- a/music/.config/mpd/mpd.conf
+++ b/music/.config/mpd/mpd.conf
@@ -1,21 +1,24 @@
-music_directory              "~/music"
-db_file                      "~/.config/mpd/mpd.db"
-log_file                     "/dev/null"
-pid_file                     "~/.config/mpd/mpd.pid"
-state_file                   "~/.config/mpd/mpdstate"
-user                         "neg"
-max_output_buffer_size       "524288"
-bind_to_address              "localhost:6600"
-connection_timeout           "5"
+music_directory                  "~/music"
+db_file                          "~/.config/mpd/mpd.db"
+pid_file                         "~/.config/mpd/mpd.pid"
+state_file                       "~/.config/mpd/mpdstate"
+sticker_file                     "~/.config/mpd/sticker.sql"
+log_file                         "/dev/null"
+user                             "neg"
+max_output_buffer_size           "524288"
+bind_to_address                  "localhost:6600"
+connection_timeout               "5"
+restore_paused                   "yes"
+save_absolute_paths_in_playlists "yes"
+metadata_to_use                  "artist,album,title,track,name,genre,date"
+follow_inside_symlinks           "yes"
+connection_timeout               "2"
+replaygain                       "off"
+auto_update                      "yes"
+
 input {
     plugin "curl"
 }
-save_absolute_paths_in_playlists  "yes"
-metadata_to_use                   "artist,album,title,track,name,genre,date"
-follow_inside_symlinks            "yes"
-connection_timeout                "2"
-replaygain                        "off"
-auto_update                       "yes"
 
 resampler {
     plugin "libsamplerate"
@@ -28,16 +31,17 @@ audio_output {
     name             "Pulseaudio"
 }
 
-audio_output {
-    type                 "alsa"
-    name                 "VMV D1 USB2.0"
-    device               "hw:0,0"
-    auto_resample        "no"
-    auto_format          "no"
-    auto_channels        "no"
-    replay_gain_handler  "none"
-    mixer_type           "none"
-    format               "44100:32:2"
+audio_output            {
+    type                "alsa"
+    name                "VMV D1 USB2.0"
+    device              "hw:0,0"
+    auto_resample       "no"
+    auto_format         "no"
+    auto_channels       "no"
+    replay_gain_handler "none"
+    mixer_type          "none"
+    format              "44100:32:2"
+    tags                "yes"
 }
 
 audio_output {
