[git] update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -300,3 +300,5 @@ music/.config/mpd/mpd.pid
 dev/.config/nvim/sessions/default.vim
 sys/.config/bpytop/error.log
 dev/.config/pylint/
+music/.config/beets/state.pickle
+music/.config/beets/discogs_token.json
