--- a/music/.config/mpd/mpd.conf
+++ b/music/.config/mpd/mpd.conf
@@ -32,15 +32,15 @@ audio_output {
 }
 
 audio_output            {
-    type                "alsa"
+    type                "jack"
     name                "VMV D1 USB2.0"
-    device              "hw:0,0"
+    device              "jackplugmpd"
     auto_resample       "no"
     auto_format         "no"
     auto_channels       "no"
     replay_gain_handler "none"
     mixer_type          "none"
-    format              "44100:32:2"
+    format              "44100:f:2"
     tags                "yes"
 }
 
