[mpd] upgrade mpd config

--- a/music/.config/mpd/mpd.conf
+++ b/music/.config/mpd/mpd.conf
@@ -6,8 +6,7 @@ sticker_file                     "~/.config/mpd/sticker.sql"
 log_file                         "/dev/null"
 user                             "neg"
 max_output_buffer_size           "524288"
-bind_to_address                  "localhost:6600"
-connection_timeout               "5"
+bind_to_address                  "::1"
 restore_paused                   "yes"
 save_absolute_paths_in_playlists "yes"
 metadata_to_use                  "artist,album,title,track,name,genre,date"
@@ -20,9 +19,27 @@ input {
     plugin "curl"
 }
 
+input {
+    plugin "soundcloud"
+}
+
+input {
+    plugin "qobuz"
+}
+
+#database {
+    #plugin "upnp"
+    #plugin "udisks"
+#}
+
+# resampler {
+#     plugin "libsamplerate"
+#     quality "Best Sinc Interpolator"
+# }
+
 resampler {
-    plugin "libsamplerate"
-    quality "Best Sinc Interpolator"
+    plugin "soxr"
+    quality "very high"
 }
 
 audio_output {
@@ -32,16 +49,19 @@ audio_output {
 }
 
 audio_output            {
-    type                "jack"
+    type                "alsa"
     name                "VMV D1 USB2.0"
-    device              "jackplugmpd"
-    auto_resample       "no"
-    auto_format         "no"
-    auto_channels       "no"
+    device              "hw:2,0"
+    auto_resample       "yes"
+    auto_format         "yes"
+    auto_channels       "yes"
     replay_gain_handler "none"
-    mixer_type          "none"
-    format              "44100:f:2"
+    mixer_type          "hardware"
+    dsd_native          "yes"
+    dop                 "no"
     tags                "yes"
+#   format              "dsd256:2"
+#   period_time         "1"
 }
 
 audio_output {
