--- a/sys/.config/bpytop/bpytop.conf
+++ b/sys/.config/bpytop/bpytop.conf
@@ -1,4 +1,4 @@
-#? Config file for bpytop v. 1.0.52
+#? Config file for bpytop v. 1.0.54
 
 #* Color theme, looks for a .theme file in "/usr/[local/]share/bpytop/themes" and "~/.config/bpytop/themes", "Default" for builtin default theme.
 #* Prefix name by a plus sign (+) for a theme located in user themes folder, i.e. color_theme="+monokai"
@@ -12,6 +12,10 @@ view_mode=proc
 
 #* Update time in milliseconds, increases automatically if set below internal loops processing time, recommended 2000 ms or above for better sample times for graphs.
 update_ms=4000
+
+#* Processes update multiplier, sets how often the process list is updated as a multiplier of "update_ms".
+#* Set to 2 or higher to greatly decrease bpytop cpu usage. (Only integers)
+proc_update_mult=2
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu responsive",
 #* "cpu lazy" updates top process over time, "cpu responsive" updates top process directly.
