--- a/sys/.config/bpytop/bpytop.conf
+++ b/sys/.config/bpytop/bpytop.conf
@@ -1,4 +1,4 @@
-#? Config file for bpytop v. 1.0.54
+#? Config file for bpytop v. 1.0.55
 
 #* Color theme, looks for a .theme file in "/usr/[local/]share/bpytop/themes" and "~/.config/bpytop/themes", "Default" for builtin default theme.
 #* Prefix name by a plus sign (+) for a theme located in user themes folder, i.e. color_theme="+monokai"
@@ -7,8 +7,8 @@ color_theme="flat-remix"
 #* If the theme set background should be shown, set to False if you want terminal background transparency
 theme_background=True
 
-#* Set bpytop view mode, "full" for everything shown, "proc" for cpu stats and processes, "stat" for cpu, mem, disks and net stats shown.
-view_mode=proc
+#* Manually set which boxes to show. Available values are "cpu mem net proc", seperate values with whitespace.
+shown_boxes="cpu mem net proc"
 
 #* Update time in milliseconds, increases automatically if set below internal loops processing time, recommended 2000 ms or above for better sample times for graphs.
 update_ms=4000
