--- a/negi3wm/.config/polybar/modules.cfg
+++ b/negi3wm/.config/polybar/modules.cfg
@@ -40,9 +40,9 @@ format-background = ${color.mgf}
 format-suffix = ""
 format-prefix = " %{T5 F#8BAAC7}%{T- F-} "
 
-[module/networkenp5s0]
+[module/network]
 type = internal/network
-interface = enp5s0
+interface = eth0
 interval = 1.0
 accumulate-stats = false # Accumulate values from all interfaces
 ping-interval = 60.0
