--- a/sys/.config/bpytop/bpytop.conf
+++ b/sys/.config/bpytop/bpytop.conf
@@ -1,4 +1,4 @@
-#? Config file for bpytop v. 1.0.55
+#? Config file for bpytop v. 1.0.57
 
 #* Color theme, looks for a .theme file in "/usr/[local/]share/bpytop/themes" and "~/.config/bpytop/themes", "Default" for builtin default theme.
 #* Prefix name by a plus sign (+) for a theme located in user themes folder, i.e. color_theme="+monokai"
@@ -6,6 +6,9 @@ color_theme="flat-remix"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency
 theme_background=True
+
+#* Sets if 24-bit truecolor should be used, will convert 24-bit colors to 256 color (6x6x6 color cube) if false.
+truecolor=True
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc", seperate values with whitespace.
 shown_boxes="cpu mem net proc"
@@ -76,6 +79,12 @@ swap_disk=False
 #* If mem box should be split to also show disks info.
 show_disks=False
 
+#* Filter out non physical disks. Set this to False to include network disks, RAM disks and similar.
+only_physical=True
+
+#* Read disks list from /etc/fstab. This also disables only_physical.
+use_fstab=False
+
 #* Set fixed values for network graphs, default "10M" = 10 Mibibytes, possible units "K", "M", "G", append with "bit" for bits instead of bytes, i.e "100mbit"
 net_download="10M"
 net_upload="10M"
@@ -88,6 +97,9 @@ net_sync=False
 
 #* If the network graphs color gradient should scale to bandwith usage or auto scale, bandwith usage is based on "net_download" and "net_upload" values
 net_color_fixed=False
+
+#* Starts with the Network Interface specified here.
+net_iface=""
 
 #* Show battery stats in top right if battery is present
 show_battery=False
